--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-matplotlib
-numpy
-torch
+matplotlib = "^3.9.2"
+torch = "^2.0.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core"]
